# docs/api/api.yaml
@@ -28,6 +28,28 @@ paths:
                 $ref: '#/components/schemas/CreateApiKeyResponse'
       tags:
         - Security
+    get:
+      operationId: search
+      parameters:
+        - in: query
+          name: limit
+          schema:
+            type: integer
+            default: 20
+        - in: query
+          name: offset
+          schema:
+            type: integer
+            default: 0
+      responses:
+        '200':
+          description: Success
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/SearchApiKeyResponse'
+      tags:
+        - Security
   '/v1/api-keys/{id}':
     get:
       operationId: get
@@ -129,6 +151,13 @@ components:
         apiKey:
           type: object
           $ref: '#/components/schemas/ApiKey'
+    SearchApiKeyResponse:
+      type: object
+      properties:
+        apiKeys:
+          type: array
+          items:
+            $ref: '#/components/schemas/ApiKey'
     ApiKey:
       type: object
       properties:
