# src/main/kotlin/com/wutsi/security/dto/SearchApiKeyResponse.kt
@@ -1,0 +1,7 @@
+package com.wutsi.security.dto
+
+import kotlin.collections.List
+
+public data class SearchApiKeyResponse(
+    public val apiKeys: List<ApiKey> = emptyList()
+)
